name:                webspider
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/webspider#readme
license:             BSD3
license-file:        LICENSE
author:              Han Joosten
maintainer:          han.joosten.han@gmail.com
copyright:           2017 Han Joosten
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable webspider
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , http-conduit
                     , network-uri
                     , tagsoup
                     , utf8-string
